fix: opt for overflow-x: auto instead of breaking

--- a/src/components/reusable/codeView/blockCodeView/blockCodeView.scss
+++ b/src/components/reusable/codeView/blockCodeView/blockCodeView.scss
@@ -196,8 +196,7 @@ $border-radius: 4px;
                 line-height: 1.6;
                 max-width: 75%;
                 box-sizing: border-box;
-                white-space: break-spaces;
-                word-wrap: break-word;
+                overflow-x: auto;
                 word-break: normal;
             }
 
